openmolar (0.2.3+bzr0769-0~__DIST__0) __DIST__; urgency=low

  * upstream tweak

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 19 Oct 2012 17:52:37 +0100


openmolar (0.2.3+bzr0768-0~__DIST__0) __DIST__; urgency=low

  * new upstream version with a significant schema change

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 19 Oct 2012 17:36:59 +0100


openmolar (0.2.2+bzr0766-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 03 Oct 2012 23:04:56 +0100


openmolar (0.2.2+bzr0765-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 28 Sep 2012 12:32:00 +0100


openmolar (0.2.2+bzr0763-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 19 Sep 2012 22:54:16 +0100


openmolar (0.2.2+bzr0762-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 05 Aug 2012 09:44:33 +0100


openmolar (0.2.2+bzr0761-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 05 Aug 2012 00:33:21 +0100


openmolar (0.2.2+bzr0760-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 04 Aug 2012 23:29:27 +0100


openmolar (0.2.1+bzr0755-0~__DIST__0) __DIST__; urgency=low

  * new upstream version (bzr 755)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 17:43:01 +0100


openmolar (0.2.1+bzr0754-0~__DIST__0) __DIST__; urgency=low

  * new upstream version (bzr 754)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 15:17:35 +0100


openmolar (0.2.1+bzr0753-0~__DIST__0) __DIST__; urgency=low

  * new upstream version (bzr 753)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 12:37:38 +0100


openmolar (0.2.1+bzr0752-0~__DIST__0) __DIST__; urgency=low
