@@ -1,3 +1,10 @@
+openmolar (0.3.0+bzr0770-0~__DIST__0) __DIST__; urgency=low
+
+  * ui tweaks
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 20 Oct 2012 01:50:13 +0100
+
+
 openmolar (0.2.3+bzr0769-0~__DIST__0) __DIST__; urgency=low
 
   * upstream tweak
